chore: change products description

--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -284,7 +284,7 @@
                                     <div class="card mb-3 card-productos text-center">
                                         <img src="../images/page-mujer/zapatillas_1.jpg" class="card-img-top" alt="zapatilla">
                                         <div class="card-body">
-                                            <h5 class="card-title">Sandalia Rusty - Blanco</h5>
+                                            <h5 class="card-title">Sandalia Rusty</h5>
                                             <p class="card-text">$99.000,00</p>
                                             <a href="#" class="btn btn-block bg-warning bg-opacity-75">Comprar Ahora</a>
                                         </div>
@@ -323,7 +323,7 @@
                                     <div class="card mb-3 card-productos text-center">
                                         <img src="../images/page-mujer/canguro_1.jpg" class="card-img-top" alt="zapatilla">
                                         <div class="card-body">
-                                            <h5 class="card-title">Canguro Haro - Amarillo</h5>
+                                            <h5 class="card-title">Canguro Amarillo</h5>
                                             <p class="card-text">$68.000,00</p>
                                             <a href="#" class="btn btn-block bg-warning bg-opacity-75">Comprar Ahora</a>
                                         </div>
@@ -356,7 +356,7 @@
                                     <div class="card mb-3 card-productos text-center">
                                         <img src="../images/page-mujer/canguro_4.jpg" class="card-img-top" alt="zapatilla">
                                         <div class="card-body">
-                                            <h5 class="card-title">Canguro Indul - Rosado</h5>
+                                            <h5 class="card-title">Canguro Indul</h5>
                                             <p class="card-text">$68.000,00</p>
                                             <a href="#" class="btn btn-block bg-warning bg-opacity-75">Comprar Ahora</a>
                                         </div>
