--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -246,7 +246,7 @@
                                     <div class="card mb-3 card-productos text-center">
                                         <img src="../images/page-hombre/remera_1.jpg" class="card-img-top" alt="remera">
                                         <div class="card-body">
-                                            <h5 class="card-title">Remera Alden - Rosado</h5>
+                                            <h5 class="card-title">Remera Alden </h5>
                                             <p class="card-text">$8.000,00</p>
                                             <a href="#" class="btn btn-block bg-warning bg-opacity-75">Comprar Ahora</a>
                                         </div>
@@ -336,7 +336,7 @@
                                     <div class="card mb-3 card-productos text-center">
                                         <img src="../images/page-hombre/zapatillas_4.jpg" class="card-img-top" alt="zapatilla">
                                         <div class="card-body">
-                                            <h5 class="card-title">Zapatilla Harold - Bordó</h5>
+                                            <h5 class="card-title">Zapatilla Haro - Bordó</h5>
                                             <p class="card-text">$118.000,00</p>
                                             <a href="#" class="btn btn-block bg-warning bg-opacity-75">Comprar Ahora</a>
                                         </div>
@@ -375,7 +375,7 @@
                                     <div class="card mb-3 card-productos text-center">
                                         <img src="../images/page-hombre/canguro_2.jpg" class="card-img-top" alt="zapatilla">
                                         <div class="card-body">
-                                            <h5 class="card-title">Canguro Rusty - Colores</h5>
+                                            <h5 class="card-title">Canguro - Colores</h5>
                                             <p class="card-text">$68.000,00</p>
                                             <a href="#" class="btn btn-block bg-warning bg-opacity-75">Comprar Ahora</a>
                                         </div>
