feat: add second project

--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -175,7 +175,7 @@
                                 <div class="card mb-3 card-productos text-center" style="max-width: 18rem;">
                                     <img src="../images/page-mujer/canguro_2.jpg" class="card-img-top" alt="zapatilla">
                                     <div class="card-body">
-                                        <h5 class="card-title">Canguro Rusty - Gris</h5>
+                                        <h5 class="card-title">Canguro Rusty - Gris Obscuro</h5>
                                         <p class="card-text">$68.000,00</p>
                                         <a href="#" class="btn btn-block bg-warning bg-opacity-75">Comprar Ahora</a>
                                     </div>
