--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -98,7 +98,7 @@
                                 <div class="card mb-3 card-productos text-center" style="max-width: 18rem;">
                                     <img src="../images/page-hombre/remera_1.jpg" class="card-img-top" alt="remera">
                                     <div class="card-body">
-                                        <h5 class="card-title">Remera Alden - Rosado</h5>
+                                        <h5 class="card-title">Remera Alden</h5>
                                         <p class="card-text">$8.000,00</p>
                                         <a href="#" class="btn btn-block bg-warning bg-opacity-75">Comprar Ahora</a>
                                     </div>
@@ -109,7 +109,7 @@
                                 <div class="card mb-3 card-productos text-center" style="max-width: 18rem;">
                                     <img src="../images/page-hombre/remera_2.jpg" class="card-img-top" alt="remera">
                                     <div class="card-body">
-                                        <h5 class="card-title">Remera Rusty - Crudo</h5>
+                                        <h5 class="card-title">Remera - Crudo</h5>
                                         <p class="card-text">$4.090,00</p>
                                         <a href="#" class="btn btn-block bg-warning bg-opacity-75">Comprar Ahora</a>
                                     </div>
@@ -257,7 +257,7 @@
                                     <div class="card mb-3 card-productos text-center">
                                         <img src="../images/page-hombre/remera_2.jpg" class="card-img-top" alt="remera">
                                         <div class="card-body">
-                                            <h5 class="card-title">Remera Rusty - Crudo</h5>
+                                            <h5 class="card-title">Remera - Crudo</h5>
                                             <p class="card-text">$4.090,00</p>
                                             <a href="#" class="btn btn-block bg-warning bg-opacity-75">Comprar Ahora</a>
                                         </div>
