--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,12 @@
 
         <link rel="icon" href="../images/logos/icono.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="../style.css">
+        
+        <!-- ANIMATE css -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        
+        <!-- Estilos propios -->
+        <link rel="stylesheet" href="../css/style.css">
         <title>Tienda Nova</title>
     </head>
     <body class="body">
@@ -49,7 +54,7 @@
 
         <!-- Main Content -->
         <main id="main" class="container-fluid mt-5">
-            <h1 class="text-center">ENVIAR UN TICKET</h1>
+            <h1 class="animate__animated animate__jello text-center">ENVIAR UN TICKET</h1>
             <section>
                 <form action="/submit" method="post">
                     <div class="mb-3 p-2">
@@ -87,7 +92,7 @@
                     </div>
 
                     <div class="d-grid col-3 mx-auto mb-3">
-                        <button class="btn btn-warning" type="submit">Enviar</button>
+                        <button class="btn btn-warning button__animation" type="submit">Enviar</button>
                       </div>             
                 </form>
             </section>
