--- a/pages/sale.html
+++ b/pages/sale.html
@@ -7,7 +7,12 @@
 
         <link rel="icon" href="../images/logos/icono.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="../style.css">
+        
+        <!-- Librería AOS -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+        <!-- Estilos propios -->
+        <link rel="stylesheet" href="../css/style.css">
         <title>Tienda Nova</title>
     </head>
     <body class="body">
@@ -49,7 +54,7 @@
 
                 <!--2. SEGUNDA ESTRUCTURA = CUERPO DE LA PAGINA-->
         <main id="main">
-            <section>
+            <section data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12">
@@ -188,6 +193,9 @@
             </div>
         </footer>
 
+        <!-- AOS script-->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>AOS.init();</script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
