--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        
+        <meta name="description" content="Descubre moda exclusiva para hombres y mujeres. Desde remeras hasta zapatillas, parkas y accesorios, con envío rápido y descuentos.">
+        <meta name="keywords" content="moda, ropa, tienda de ropa, remeras, zapatillas, parkas, jeans, accesorios, hombre, mujer, tendencias, ofertas, sale, tienda Nova">
+        <meta name="author" content="Cercasi Javier Agustín">
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="icon" href="./images/logos/icono.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
        
@@ -16,7 +20,7 @@
 
         <!-- Estilos propios -->
         <link rel="stylesheet" href="./css/style.css">
-        <title>Tienda Nova</title>
+        <title>Tienda Nova - Moda para Hombre y Mujer</title>
     </head>
     <body class="body">
         <!-- Header -->
@@ -24,7 +28,7 @@
             <nav class="navbar navbar-expand-md navbar-dark">
                 <div class="container-fluid">
                     <!-- Logo -->
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="./index.html">
                         <img src="./images/logos/logo-tienda.jpg" alt="Nova Logo" class="img-fluid logo" style="max-height: 50px;">
                     </a>
                     <!-- Menú hamburguesa -->
@@ -58,11 +62,9 @@
        <!-- Main Content -->
         <main id="main" class="container-fluid my-3">
             <!-- Section Title -->
-            <section data-aos="fade-right" data-aos-easing="linear" data-aos-duration="800">    
-                <section class="text-center mb-4">
-                    <h1 class="animate__animated animate__bounce display-5 mt-4">Bienvenidos a Nova</h1>
-                    <p class="lead mb-4">Descubre las últimas tendencias en moda con Nova. Encuentra tu estilo con nuestras colecciones exclusivas y disfruta de una gran experiencia.</p>
-                </section>
+            <section class="welcome-section text-center mb-4" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="800">
+                <h1 class="animate__animated animate__bounce display-5 mt-4">Bienvenidos a Nova</h1>
+                <p class="lead mb-4">Descubre las últimas tendencias en moda con Nova. Encuentra tu estilo con nuestras colecciones exclusivas y disfruta de una gran experiencia.</p>
             </section>
 
             <!-- Categories -->
